# RoninOBSChat

./: .gitignore  BUILD.md  CMakeLists.txt  CMakePresets.json  README.md  buildspec.json
.github/workflows/: build.yml
cmake/common/: bootstrap.cmake  buildnumber.cmake  buildspec_common.cmake  ccache.cmake  compiler_common.cmake  helpers_common.cmake  osconfig.cmake
cmake/windows/: buildspec.cmake  compilerconfig.cmake  defaults.cmake  helpers.cmake
cmake/windows/resources/: resource.rc.in
data/locale/: en-US.ini
src/: AutoMod.cpp  AutoMod.hpp  ChatBot.cpp  ChatBot.hpp  ChatMessage.hpp  CommandHandler.cpp  CommandHandler.hpp  ModerationLog.cpp  ModerationLog.hpp  TimedMessages.cpp  TimedMessages.hpp  YouTubeClient.cpp  YouTubeClient.hpp  plugin-main.cpp
src/ui/: ChatDock.cpp  ChatDock.hpp  SettingsDialog.cpp  SettingsDialog.hpp
